fixed id issues on form inputs and improved spacing above tables

--- a/art-gallery-frontend/src/components/pages/admin/admin.css
+++ b/art-gallery-frontend/src/components/pages/admin/admin.css
@@ -128,6 +128,10 @@
 	opacity: 0.8;
 }
 
+.above-table {
+    margin-bottom: var(--margin-md);
+}
+
 /* MEDIA QUERIES */
 
 /* 380-479 */
